# membrane-tpch

./: CMakeLists.txt  README.md
src/: run.cpp
src/sql/: prejoin.sql  q03-aggregate.sql  q03-prejoined.sql  q03-projection.sql  q03-selection.sql  q03-selproj.sql  q03-standard.sql  q05-aggregate.sql  q05-prejoined.sql  q05-projection.sql  q05-selection.sql  q05-selproj.sql  q05-standard.sql  q06-aggregate.sql  q06-selection.sql  q06-selproj.sql  q08-aggregate.sql  q08-prejoined.sql  q08-projection.sql  q08-selection.sql  q08-selproj.sql  q08-standard.sql  q10-aggregate.sql  q10-prejoined.sql  q10-projection.sql  q10-selection.sql  q10-selproj.sql  q10-standard.sql  q12-aggregate.sql  q12-prejoined.sql  q12-projection.sql  q12-selection.sql  q12-selproj.sql  q12-standard.sql  q14-aggregate.sql  q14-prejoined.sql  q14-projection.sql  q14-selection.sql  q14-selproj.sql  q14-standard.sql  (+6 more)
